REF-015(docs) : REFCategoryHierarchyResultMapper 주석